# musl

./: CMakeLists.txt  vcsetup.bat
arch/msvc-x86_64/: atomic_arch.h
arch/msvc-x86_64/bits/: alltypes.h
include/: ctype.h  inttypes.h  stdio.h  string.h  strings.h  wchar.h  wctype.h
src/internal/: stdio_impl.h
src/math/msvc-x86_64/: math-impl.c
